--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -458,7 +458,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="10dp"
-                        android:text="How to Use?"
+                        android:text="Quick Tour"
                         android:textColor="@color/red"
                         android:textSize="15sp"
                         android:textStyle="bold" />
@@ -473,7 +473,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="center"
-                        android:text="Tutorial to use the IOT device."
+                        android:text="A quick look at the features"
                         android:textColor="@android:color/darker_gray"
                         android:textSize="10sp"
                         android:textStyle="bold" />
